Tests for json converter layer for deserializing json files. Added jacoco dependency.